# carma-partner-import

./: carma-partner-import.cabal  sources.txt
src/: Main.hs
src/Carma/: Partner.hs
