name:                carma-partner-import
version:             0.5
synopsis:            CaRMa partner import library and tool
license-file:        LICENSE
author:              Dmitry Dzhus
maintainer:          dima@dzhus.org
build-type:          Simple
cabal-version:       >=1.8

library
  ghc-options: -Wall
  hs-source-dirs: src

  exposed-modules:
    Carma.Partner

  build-depends:
    aeson                  == 0.6.*,
    attoparsec             == 0.10.*,
    base                   == 4.6.*,
    bytestring             == 0.10.*,
    carma-dict             == 0.1.*,
    carma-http             == 0.4.*,
    conduit                == 1.0.*,
    containers             == 0.5.*,
    csv-conduit            == 0.5.*,
    HTTP                   == 4000.2.*,
    mmorph                 == 1.0.*,
    network                == 2.4.*,
    resourcet              == 0.4.*,
    transformers           == 0.3.*,
    text                   == 0.11.*,
    unordered-containers   == 0.2.*

executable carma-partner-importer
  ghc-options: -Wall
  main-is:             src/Main.hs

  build-depends:
    aeson                  == 0.6.*,
    attoparsec             == 0.10.*,
    base                   == 4.6.*,
    bytestring             == 0.10.*,
    carma-dict             == 0.1.*,
    carma-http             == 0.4.*,
    carma-partner-import,
    conduit                == 1.0.*,
    containers             == 0.5.*,
    csv-conduit            == 0.5.*,
    HTTP                   == 4000.2.*,
    mmorph                 == 1.0.*,
    network                == 2.4.*,
    resourcet              == 0.4.*,
    transformers           == 0.3.*,
    text                   == 0.11.*,
    unordered-containers   == 0.2.*
